--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,7 +72,7 @@ body {
 }
 
 .welcome-img {
-  background-image: url("../resources/Vectorrr.png");
+  background-image: url("../resources/vector.png");
   width: 1320px;
   height: 600px;
   position: relative;
@@ -172,16 +172,14 @@ body {
 }
 
 .coming {
-  width: 1600px;
-  height: 7335px;
   background: #fff;
   display: flex;
   text-align: left;
-  margin-left: 240px;
   justify-content: center;
+  margin-left: 100px;
 }
-.new-best-offer{
-    margin-top: 200px;
+.new-best-offer {
+  margin-top: 200px;
 }
 #new-best {
   color: #f00;
@@ -218,9 +216,9 @@ body {
   padding: 35px;
   margin-left: 60px;
 }
-.year-p{
-    margin-left: 50px;
-    margin-top: 220px;
+.year-p {
+  margin-left: 50px;
+  margin-top: 220px;
 }
 #year {
   color: #f00;
@@ -228,4 +226,143 @@ body {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+.function {
+  padding: 30px 30px 30px 150px;
+  margin-top: 120px;
+  display: center;
+  text-align: center;
+}
+
+.what {
+  color: #070211;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 170px;
+}
+
+.holiday {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  margin-top: 16px;
+}
+
+.holiday-speech {
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+  margin-top: 28px;
+}
+
+.span {
+  color: #f00;
+  text-align: center;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+}
+
+.red-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1320px;
+  height: 230px;
+  margin-top: 600px;
+}
+.box {
+  display: block;
+  margin-left: 110px;
+  margin-top: -650px;
+}
+.women {
+  display: block;
+  margin-left: 983px;
+  margin-top: -676px;
+  width: 429px;
+  height: 433px;
+}
+.circle-two {
+  width: 220px;
+  height: 220px;
+  border-radius: 463px;
+  border: 15px solid white;
+  position: absolute;
+  right: 30%;
+  margin-top: -300px;
+}
+.discount {
+  position: absolute;
+  right: 28.5%;
+  margin-top: -326.5px;
+}
+.gift {
+  color: #f00;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.big-best-gift {
+  margin-top: 400px;
+  justify-content: center;
+  margin-left: 100px;
+}
+
+.image-three {
+  width: 424px;
+  height: 450px;
+  border-radius: 16px;
+  margin-right: 15px;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+.subscribe {
+  background-color: rgba(255, 0, 0, 0.05);
+  width: 1320px;
+  height: 616px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#email {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 60px;
+}
+.news-letter {
+    color: #070211;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+}
+.dolor-two {
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  width: 896px;
+  padding-left: 210px;
 }
