--- a/styles/styles.css
+++ b/styles/styles.css
@@ -347,14 +347,14 @@ body {
   padding-top: 60px;
 }
 .news-letter {
-    color: #070211;
-    text-align: center;
-    font-family: Merriweather;
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
-    text-transform: capitalize;
+  color: #070211;
+  text-align: center;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
 }
 .dolor-two {
   color: rgba(7, 2, 17, 0.6);
@@ -365,4 +365,118 @@ body {
   line-height: 32px;
   width: 896px;
   padding-left: 210px;
+}
+.sub-btn {
+  width: 210px;
+  height: 72px;
+  flex-shrink: 0;
+  border-radius: 0px 50px 50px 0px;
+  background: #f00;
+  border: none;
+  margin: 0;
+  color: #fff;
+}
+
+.user-btn {
+  width: 430px;
+  height: 100%;
+  border: 0;
+  border-color: white;
+  margin-left: 20px;
+}
+.user {
+  width: 648px;
+  height: 72px;
+  flex-shrink: 0;
+  border-radius: 50px;
+  background: #fff;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+}
+.footer {
+  background-color: #070211;
+  width: 1600px;
+  height: 609px;
+  flex-shrink: 0;
+  margin-top: 300px;
+  margin-left:100px;
+}
+
+.big {
+  color: white;
+  display: block;
+  margin-left: 200px;
+  margin-top: -500px;
+  /* text-align: left; */
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px;
+}
+
+.number {
+  color: white;
+  margin-left: 1500px;
+  margin-top: -100px;
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px;
+}
+
+.website {
+  color: white;
+  margin-left: 1500px;
+  margin-top: -100px;
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px;
+}
+
+.line {
+  width: 1320px;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.15);
+  color: 15%;
+}
+
+.logo {
+  width: 64px;
+  height: 64px;
+  display: flex;
+  margin-left: 850px;
+  margin-right: auto;
+  margin-top: 300px;
+}
+.logoo{
+  margin-right: 20px;
+}
+.all {
+  margin-right: 1200px;
+  margin-top: 50px;
+  color: white;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.un {
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-left: 1600px;
+  margin-top: -50px;
 }
