--- a/styles/styles.css
+++ b/styles/styles.css
@@ -395,88 +395,72 @@ body {
   margin-right: auto;
   overflow: hidden;
 }
-.footer {
-  background-color: #070211;
-  width: 1600px;
-  height: 609px;
-  flex-shrink: 0;
-  margin-top: 300px;
-  margin-left:100px;
-}
-
-.big {
-  color: white;
+.footer-conteiner{
   display: block;
-  margin-left: 200px;
-  margin-top: -500px;
-  /* text-align: left; */
-  font-family: Inter;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 40px;
+  width: 100%;
+  height: 600px;
+  background-color:rgb(17, 16, 48);
+ 
+ 
+
 }
 
-.number {
-  color: white;
-  margin-left: 1500px;
-  margin-top: -100px;
-  color: #fff;
-  font-family: Inter;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 40px;
-}
-
-.website {
-  color: white;
-  margin-left: 1500px;
-  margin-top: -100px;
-  color: #fff;
-  font-family: Inter;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 40px;
-}
-
-.line {
-  width: 1320px;
-  height: 1px;
-  background: rgba(255, 255, 255, 0.15);
-  color: 15%;
-}
-
-.logo {
-  width: 64px;
-  height: 64px;
+.footer-div-1{
   display: flex;
-  margin-left: 850px;
-  margin-right: auto;
-  margin-top: 300px;
-}
-.logoo{
-  margin-right: 20px;
-}
-.all {
-  margin-right: 1200px;
-  margin-top: 50px;
-  color: white;
-  font-family: Inter;
-  font-size: 24px;
-  font-style: normal;
+  padding-top: 80px;
+  padding-bottom: 40px;
+  padding-left: 100px;
+  color: azure;
+  font-size: 24;
+  font-family: 'Merriweather', serif;
   font-weight: 500;
-  line-height: normal;
+  text-align: left;
+  gap:1200px;
+  font-family: 'Inter', sans-serif;
 }
 
-.un {
-  color: #fff;
-  font-family: Inter;
-  font-size: 24px;
-  font-style: normal;
+
+
+.footer-div-2{
+  color: azure;
+  font-size: 24;
+  font-family: 'Merriweather', serif;
   font-weight: 500;
-  line-height: normal;
-  margin-left: 1600px;
-  margin-top: -50px;
+  padding-bottom:20PX ;
+  font-family: 'Inter', sans-serif;
 }
+
+.footerp-1{
+  
+  text-decoration: 20em;
+
+}
+
+.pictur{
+  display: flex;
+  padding-left: 40%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  gap: 40px;
+  border-top: 1px solid rgb(118, 118, 161);
+  border-bottom: 1px solid rgb(140, 140, 179);
+
+}
+
+.last-div{
+
+  display: flex;
+  padding-top: 80px;
+  padding-bottom: 40px;
+  padding-left: 100px;
+  color: azure;
+  font-size: 24;
+  font-family: 'Merriweather', serif;
+  font-weight: 500;
+  text-align: left;
+  gap:1200px;
+  font-family: 'Inter', sans-serif;
+
+
+}
+
